# BitcoinPipeline

./: .env.example  .gitignore  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: agregation.md  merise_mcd.md  openapi.json  openapi.md  rgpd_procedures.md  specs_techniques.md  sql_queries.md
scripts/: convert_bitfinex_parquet.py  seed_bitstamp.py  seed_bitstamp_join_sample.py  seed_coinbase.py
sql/: schema.sql
src/: aggregate_sql.py  normalize.py  persist.py
src/api/: main.py
src/api/core/: config.py  security.py
src/api/routes/: auth.py  prices.py
src/api/schemas/: auth.py  prices.py
src/api/services/: auth_service.py  prices_service.py
src/extract/: api_collector.py  bigdata_collector.py  db_collector.py  file_collector.py  scraper_collector.py
src/utils/: db.py  logger.py  results.py
tests/: test_normalize.py
