[project]
name = "bitcoinpipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.2",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=25.0.0",
    "pydantic-settings>=2.14.2",
    "pyspark==3.5.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
